Write equations and name params.

--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -8,11 +8,48 @@
     "\n",
     "We use leaky integrate-and-fire neurons with conductance-based synapses (see Section 13.6.2 of Gerstner, Kistler, Naud, and Paninski (http://neuronaldynamics.epfl.ch/index.html)).\n",
     "\n",
-    "The $i$-th neuron's membrane voltage $V_i(t)$ is given by:\n",
+    "The $i$-th neuron's membrane voltage $V^i(t)$ is given by:\n",
     "\n",
-    "$\\tau_m\\cfrac{dV_i}{dt} = -(V_i - E_L) - g^i_A(t)(V_i - E_A) - g^i_{N}(t)(V_i - E_N) - g^i_G(t)(V_i - E_G) + g^i_{AHP}(t)(V_i - E_{AHP})$\n",
+    "$\\tau_m\\cfrac{dV^i}{dt} = -(V^i - E_L) - g^i_E(t)(V^i - E_E) - g^i_I(t)(V^i - E_I) + g^i_{AHP}(t)(V^i - E_{AHP})$\n",
     "\n",
-    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_A$ and $E_A$ the AMPA conductance and reversal potential, respectively, $g^i_N$ and $E_N$ the NMDA conductance and reversal potential, $g^i_G$ and $E_G$ the GABA conductance and reversal potential, and $g^i_{AHP}$ and $E_{AHP}$ the afterhyperpolarization (K+) conductance and reversal potential, with conductances defined relative to the leak conductance."
+    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_E$ and $E_E$ the excitatory conductance and reversal potential, respectively, $g^i_I$ and $E_I$ the inhibitory conductance and reversal potential, and $g^i_{AHP}$ and $E_{AHP}$ the afterhyperpolarization (K+) conductance and reversal potential, with conductances defined relative to the leak conductance.\n",
+    "\n",
+    "When the voltage of neuron $i$ crosses the threshold $V_{th}^i$ it spikes and is reset to $V_r^i$ for $\\tau_{rp}^i$ seconds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associated model params\n",
+    "\n",
+    "$\\tau_m^{PC}$\n",
+    "\n",
+    "$E_L^{PC}$\n",
+    "\n",
+    "$V_{th}^{PC}$\n",
+    "\n",
+    "$V_r^{PC}$\n",
+    "\n",
+    "$\\tau_{rp}^{PC}$\n",
+    "\n",
+    "\n",
+    "$\\tau_m^{INH}$\n",
+    "\n",
+    "$E_L^{INH}$\n",
+    "\n",
+    "$V_{th}^{INH}$\n",
+    "\n",
+    "$V_r^{INH}$\n",
+    "\n",
+    "$\\tau_{rp}^{INH}$\n",
+    "\n",
+    "\n",
+    "$E_E$\n",
+    "\n",
+    "$E_I$\n",
+    "\n",
+    "$E_{AHP}$"
    ]
   },
   {
@@ -34,6 +71,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Associated model params\n",
+    "\n",
+    "$\\tau_E$\n",
+    "\n",
+    "$\\tau_I$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Afterhyperpolarization\n",
     "\n",
     "The afterhyperpolarization condutance is given by:\n",
@@ -47,13 +95,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trajectory\n",
-    "\n",
-    "The rat's trajectory through the box is generated using a correlated random walk whose 2D velocity obeys the following dynamics:\n",
-    "\n",
-    "$\\tau_{trj}\\cfrac{d\\mathbf{v}}{dt} = -\\mathbf{v} + s_{trj}\\sqrt{\\cfrac{2\\tau_{trj}}{dt}}\\boldsymbol{\\eta}.$\n",
-    "\n",
-    "The resulting trajectory $\\mathbf{x}(t) = \\int_0^t \\mathbf{v} dt$ is confined within a specified box, elastically reflecting when the trajectory contacts any of the walls."
+    "## Associated model param\n",
+    "$\\tau_{AHP}$"
    ]
   },
   {
@@ -75,6 +118,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Associated model parameters\n",
+    "\n",
+    "$\\lambda^{PL}$\n",
+    "\n",
+    "$r_{max}^{PL}$\n",
+    "\n",
+    "$\\bar{w}_E^{PC, PL}$\n",
+    "\n",
+    "$\\sigma_E^{PC, PL}$\n",
+    "\n",
+    "$s_{th}$\n",
+    "\n",
+    "$s_s$\n",
+    "\n",
+    "$s_o$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# STATE --> PC connectivity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All state --> PC connectivity is purely excitatory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associated model params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\bar{w}_{E,init}^{PC, ST}$\n",
+    "\n",
+    "$\\sigma_{E,init}^{PC, ST}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# EC->CA3-PC activity-dependent plasticity\n",
     "\n",
     "Hyun (2013, 2015) showed that a 10 Hz spike train in a CA3 PC lasting 1-2 s, elicited either by direct current injection or activation of upstream mossy fibers, was sufficient to almost double the size of EC->CA3 EPSPs.\n",
@@ -85,11 +179,11 @@
     "\n",
     "where $t^{k(i)}$ is the $i$-th neuron's $k$-th spike time, and $\\alpha$ is a one-sided exponential with timescale $\\tau_c$.\n",
     "\n",
-    "The $c_i$-dependent change in $w_{A,i}^{PC,EC}$, which we abbreviate to $w_i$ here, is given by:\n",
+    "The $c_i$-dependent change in $w_E^{PC,ST}$, which we abbreviate to $w_i$ here, is given by:\n",
     "\n",
-    "$\\tau_w\\cfrac{dw_i}{dt} = z(c_i)(w_{max} - w_i)$\n",
+    "$\\tau_w\\cfrac{dw_i}{dt} = z(c_i)(a_pw_{i,init} - w_i)$\n",
     "\n",
-    "with $z(c)$ defined as a sigmoidal nonlinearity centered at $c^*$ and with a slope of $\\beta$, i.e.,\n",
+    "where $w_{i, init}$ is the initial weight from STATE to neuron $i$, $a_p$ is the plasticity amplification factor, governing the maximum value $w_i$ can reach, and with $z(c)$ defined as a sigmoidal nonlinearity centered at $c^*$ and with a slope of $\\beta$, i.e.,\n",
     "\n",
     "$z(c) = \\cfrac{1}{1 + \\exp[-(c - c^*)/\\beta]}.$\n",
     "\n",
@@ -100,7 +194,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recurrent CA3 PC-PC connectivity"
+    "## Associated model params\n",
+    "\n",
+    "$\\tau_c$\n",
+    "\n",
+    "$\\tau_w$\n",
+    "\n",
+    "$a_p$\n",
+    "\n",
+    "$c^*$\n",
+    "\n",
+    "$\\beta$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PC->PC connectivity"
    ]
   },
   {
@@ -109,9 +220,115 @@
    "source": [
     "We model recurrent connectivity among CA3 PCs by assuming that cells with similar place-tuning have a higher probability of connecting. Specifically, the probability of a candidate targ PC receiving a connection from a src PC at a distance $d$ away is given by:\n",
     "\n",
-    "$P(d) = \\min(1, Z_{PC}\\exp[-d/\\lambda_{PC}])$\n",
+    "$P(d) = \\min(1, Z^{PC, PC}\\exp[-d/\\lambda^{PC, PC}])$\n",
     "\n",
-    "with $\\lambda_{PC} > 0$."
+    "with $\\lambda^{PC, PC} > 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associated model params\n",
+    "\n",
+    "$N_{PC}$\n",
+    "\n",
+    "$\\lambda^{PC, PC}$\n",
+    "\n",
+    "$Z^{PC, PC}$\n",
+    "\n",
+    "$\\bar{w}_E^{PC, PC}$\n",
+    "\n",
+    "$\\sigma_E^{PC, PC}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PC->INH connectivity\n",
+    "\n",
+    "PCs send excitatory projections to INH neurons with similar place fields, according to:\n",
+    "\n",
+    "$P(d) = \\min(1, Z^{INH, PC}\\exp[-d/\\lambda^{INH, PC}])$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associated model params\n",
+    "\n",
+    "$N_{INH}$\n",
+    "\n",
+    "$\\lambda^{INH, PC}$\n",
+    "\n",
+    "$Z^{INH, PC}$\n",
+    "\n",
+    "$\\bar{w}_E^{INH, PC}$\n",
+    "\n",
+    "$\\sigma_E^{INH, PC}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# INH->PC connectivity\n",
+    "\n",
+    "INHs send inhibitory projections back to PCs in the surround, but not center of their own place fields, according to:\n",
+    "\n",
+    "$P(d) = \\max(0, \\min(1, Z_s^{PC, INH}\\exp[-d/\\lambda_s^{PC, INH}] - Z_c^{PC, INH}\\exp[-d/\\lambda_c^{PC, INH}]))$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associated model params\n",
+    "\n",
+    "$\\lambda_s^{PC, INH}$\n",
+    "\n",
+    "$Z_s^{PC, INH}$\n",
+    "\n",
+    "$\\lambda_c^{PC, INH}$\n",
+    "\n",
+    "$Z_c^{PC, INH}$\n",
+    "\n",
+    "$\\bar{w}_I^{PC, INH}$\n",
+    "\n",
+    "$\\sigma_I^{PC, INH}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Replay trigger"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To trigger replay we inject a square current pulse into a set of PCs near the simulated animal's final location. In particular, we stimulate all PCs within a radius $r_{tr}$ of latent location $(x_{tr}, y_{tr})$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associated model params\n",
+    "\n",
+    "$\\Delta T_{tr}$\n",
+    "\n",
+    "$a_{tr}$\n",
+    "\n",
+    "$x_{tr}$\n",
+    "\n",
+    "$y_{tr}$\n",
+    "\n",
+    "$r_{tr}$"
    ]
   }
  ],
@@ -131,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
