--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -23,33 +23,32 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\tau_m^{PC}$\n",
+    "$\\tau_m^{PC}$ (T_M_PC): PC membrane time constant\n",
     "\n",
-    "$E_L^{PC}$\n",
+    "$E_L^{PC}$ (E_L_PC): PC membrane leak potential\n",
     "\n",
-    "$V_{th}^{PC}$\n",
+    "$V_{th}^{PC}$ (V_TH_PC): PC spike threshold\n",
     "\n",
-    "$V_r^{PC}$\n",
+    "$V_r^{PC}$ (V_R_PC): PC reset potential\n",
     "\n",
-    "$\\tau_{rp}^{PC}$\n",
+    "$\\tau_{rp}^{PC}$ (T_RP_PC): PC refractory period\n",
     "\n",
-    "\n",
-    "$\\tau_m^{INH}$\n",
-    "\n",
-    "$E_L^{INH}$\n",
-    "\n",
-    "$V_{th}^{INH}$\n",
-    "\n",
-    "$V_r^{INH}$\n",
-    "\n",
-    "$\\tau_{rp}^{INH}$\n",
+    "$E_{AHP}^{PC}$ (E_AHP_PC): PC afterhyperpolarization reversal potential\n",
     "\n",
     "\n",
-    "$E_E$\n",
+    "$\\tau_m^{INH}$ (T_M_INH): INH membrane time constant\n",
     "\n",
-    "$E_I$\n",
+    "$E_L^{INH}$ (E_L_INH): INH membrane leak potential\n",
     "\n",
-    "$E_{AHP}$"
+    "$V_{th}^{INH}$ (V_TH_INH): INH spike threshold\n",
+    "\n",
+    "$V_r^{INH}$ (V_R_INH): INH reset potential\n",
+    "\n",
+    "$\\tau_{rp}^{INH}$ (T_RP_INH): INH refractory period\n",
+    "\n",
+    "$E_E$ (E_E): EXC synaptic reversal potential\n",
+    "\n",
+    "$E_I$ (E_I): INH synaptic reversal potential"
    ]
   },
   {
@@ -73,9 +72,9 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\tau_E$\n",
+    "$\\tau_E$ (T_E): EXC synaptic decay time constant\n",
     "\n",
-    "$\\tau_I$"
+    "$\\tau_I$ (T_I): INH synaptic decay time constant"
    ]
   },
   {
@@ -96,7 +95,8 @@
    "metadata": {},
    "source": [
     "## Associated model param\n",
-    "$\\tau_{AHP}$"
+    "\n",
+    "$\\tau_{AHP}^{PC}$ (T_AHP_PC): PC afterhyperpolarization decay time constant"
    ]
   },
   {
@@ -107,9 +107,15 @@
     "\n",
     "Each CA3 cell is associated with a specific place field, defined by a center $\\mathbf{x}_i$ and a width $\\lambda^{PL}$. When the rat is inside the cell's place field, the rate $r^{PL}_i$ of a specific set of synaptic inputs to the cell increases, as given by\n",
     "\n",
-    "$r^{PL}_i(\\mathbf{x}) = r^{PL}_{max} \\exp\\left[-\\cfrac{\\|\\mathbf{x} - \\mathbf{x}_i\\|^2}{2(\\lambda^{PL})^2}\\right].$\n",
+    "$r^{PL}_i(\\mathbf{x}) = r^{PL}_{max} \\exp\\left[-\\cfrac{\\|\\mathbf{x} - \\mathbf{x}_i\\|^2}{2(\\lambda^{PL})^2}\\right]f(s)$\n",
     "\n",
-    "The actual synaptic input train is sampled from a Poisson process parameterized by this time-varying rate function.\n",
+    "where $f(s)$ represents the speed-dependent modulation and is given by \n",
+    "\n",
+    "$\\cfrac{1}{1 + \\exp(-(s - s_{th})/\\beta_s)}$\n",
+    "\n",
+    "with $s_{th}$ being the \"threshold\" speed, and $\\beta_s$ representing the steepness factor.\n",
+    "\n",
+    "The actual synaptic input train is sampled from a Poisson process parameterized by the time-varying rate $r^{PL}_i(\\mathbf{x})$.\n",
     "\n",
     "Each cell's place field center is sampled from a uniform distribution over the environment accessible to the rat."
    ]
@@ -120,19 +126,17 @@
    "source": [
     "## Associated model parameters\n",
     "\n",
-    "$\\lambda^{PL}$\n",
+    "$\\lambda^{PL}$ (L_PL): place-tuning length scale\n",
     "\n",
-    "$r_{max}^{PL}$\n",
+    "$r_{max}^{PL}$ (R_MAX): place-tuning max input rate\n",
     "\n",
-    "$\\bar{w}_E^{PC, PL}$\n",
+    "$\\bar{w}_E^{PC, PL}$ (W_E_PC_PL): mean EXC PL->PC synaptic weight\n",
     "\n",
-    "$\\sigma_E^{PC, PL}$\n",
+    "$\\sigma_E^{PC, PL}$ (S_E_PC_PL): std EXC PL->PC synaptic weight\n",
     "\n",
-    "$s_{th}$\n",
+    "$s_{th}$ (S_TH): threshold for speed modulation\n",
     "\n",
-    "$s_s$\n",
-    "\n",
-    "$s_o$"
+    "$\\beta_s$ (B_S): steepness factor for speed modulation"
    ]
   },
   {
@@ -160,9 +164,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\bar{w}_{E,init}^{PC, ST}$\n",
+    "$\\bar{w}_{E,init}^{PC, ST}$ (W_E_INIT_PC_ST): mean initial EXC synaptic weight to PC from its associated ST input\n",
     "\n",
-    "$\\sigma_{E,init}^{PC, ST}$"
+    "$\\sigma_{E,init}^{PC, ST}$ (S_E_INIT_PC_ST): std initial EXC synaptic weight to PC from its associated ST input"
    ]
   },
   {
@@ -183,9 +187,9 @@
     "\n",
     "$\\tau_w\\cfrac{dw_i}{dt} = z(c_i)(a_pw_{i,init} - w_i)$\n",
     "\n",
-    "where $w_{i, init}$ is the initial weight from STATE to neuron $i$, $a_p$ is the plasticity amplification factor, governing the maximum value $w_i$ can reach, and with $z(c)$ defined as a sigmoidal nonlinearity centered at $c^*$ and with a slope of $\\beta$, i.e.,\n",
+    "where $w_{i, init}$ is the initial weight from STATE to neuron $i$, $a_p$ is the plasticity amplification factor, governing the maximum value $w_i$ can reach, and with $z(c)$ defined as a sigmoidal nonlinearity centered at $c^*$ and with a slope of $\\beta_c$, i.e.,\n",
     "\n",
-    "$z(c) = \\cfrac{1}{1 + \\exp[-(c - c^*)/\\beta]}.$\n",
+    "$z(c) = \\cfrac{1}{1 + \\exp[-(c - c^*)/\\beta_c]}.$\n",
     "\n",
     "In other words, when rapid spiking causes $c_i$ to exceed a threshold $c^*$, $w_i$ increases towards $w_{max}$ with a timescale $\\tau_c$."
    ]
@@ -196,15 +200,15 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\tau_c$\n",
+    "$\\tau_c$ (T_C): spike-counter decay time constant\n",
     "\n",
-    "$\\tau_w$\n",
+    "$\\tau_w$ (T_W): ST-->PC weight change time constant\n",
     "\n",
-    "$a_p$\n",
+    "$a_p$ (A_P): max amplification factor for ST-->PC EXC weight change\n",
     "\n",
-    "$c^*$\n",
+    "$c^*$ (C_S): spike-count threshold to trigger weight change\n",
     "\n",
-    "$\\beta$"
+    "$\\beta_c$ (B_C): spike-count steepness factor"
    ]
   },
   {
@@ -231,15 +235,15 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$N_{PC}$\n",
+    "$N_{PC}$ (N_PC): num PCs in ntwk\n",
     "\n",
-    "$\\lambda^{PC, PC}$\n",
+    "$\\lambda^{PC, PC}$ (L_PC_PC): PC-->PC connectivity length scale\n",
     "\n",
-    "$Z^{PC, PC}$\n",
+    "$Z^{PC, PC}$ (Z_PC_PC): PC-->PC connectivity normalization factor\n",
     "\n",
-    "$\\bar{w}_E^{PC, PC}$\n",
+    "$\\bar{w}_E^{PC, PC}$ (W_E_PC_PC): mean PC-->PC synaptic weight\n",
     "\n",
-    "$\\sigma_E^{PC, PC}$"
+    "$\\sigma_E^{PC, PC}$ (S_E_PC_PC): std PC-->PC synaptic weight"
    ]
   },
   {
@@ -259,15 +263,15 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$N_{INH}$\n",
+    "$N_{INH}$ (N_INH): num INHs in ntwk\n",
     "\n",
-    "$\\lambda^{INH, PC}$\n",
+    "$\\lambda^{INH, PC}$ (L_INH_PC): PC-->INH connectivity length scale\n",
     "\n",
-    "$Z^{INH, PC}$\n",
+    "$Z^{INH, PC}$ (Z_INH_PC): PC-->INH connectivity normalization factor\n",
     "\n",
-    "$\\bar{w}_E^{INH, PC}$\n",
+    "$\\bar{w}_E^{INH, PC}$ (W_E_INH_PC): mean PC-->INH synaptic weight\n",
     "\n",
-    "$\\sigma_E^{INH, PC}$"
+    "$\\sigma_E^{INH, PC}$ (S_E_INH_PC): std PC-->INH synaptic weight"
    ]
   },
   {
@@ -287,17 +291,17 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\lambda_s^{PC, INH}$\n",
+    "$\\lambda_c^{PC, INH}$ (L_C_PC_INH): INH --> PC connectivity length scale for center\n",
     "\n",
-    "$Z_s^{PC, INH}$\n",
+    "$Z_c^{PC, INH}$ (Z_C_PC_INH): INH --> PC connectivity normalization factor for center\n",
     "\n",
-    "$\\lambda_c^{PC, INH}$\n",
+    "$\\lambda_s^{PC, INH}$ (L_S_PC_INH): INH --> PC connectivity length scale for surround\n",
     "\n",
-    "$Z_c^{PC, INH}$\n",
+    "$Z_s^{PC, INH}$ (Z_S_PC_INH): INH --> PC connectivity normalization factor for surround\n",
     "\n",
-    "$\\bar{w}_I^{PC, INH}$\n",
+    "$\\bar{w}_I^{PC, INH}$ (W_I_PC_INH): mean INH --> PC INH synaptic weight\n",
     "\n",
-    "$\\sigma_I^{PC, INH}$"
+    "$\\sigma_I^{PC, INH}$ (S_I_PC_INH): std INH --> PC INH synaptic weight"
    ]
   },
   {
@@ -320,15 +324,15 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\Delta T_{tr}$\n",
+    "$\\Delta T_{tr}$ (D_T_TR): replay trigger duration\n",
     "\n",
-    "$a_{tr}$\n",
+    "$a_{tr}$ (A_TR): replay trigger amplitude\n",
     "\n",
-    "$x_{tr}$\n",
+    "$x_{tr}$ (X_TR): replay trigger x-center\n",
     "\n",
-    "$y_{tr}$\n",
+    "$y_{tr}$ (Y_TR): replay trigger y-center\n",
     "\n",
-    "$r_{tr}$"
+    "$r_{tr}$ (R_TR): replay trigger radius"
    ]
   }
  ],
