--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -23,32 +23,32 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\tau_m^{PC}$ (T_M_PC): PC membrane time constant\n",
+    "$\\tau_m^{PC}$ (T_M_PC): PC membrane time constant (F)\n",
     "\n",
-    "$E_L^{PC}$ (E_L_PC): PC membrane leak potential\n",
+    "$E_L^{PC}$ (E_L_PC): PC membrane leak potential (F)\n",
     "\n",
-    "$V_{th}^{PC}$ (V_TH_PC): PC spike threshold\n",
+    "$V_{th}^{PC}$ (V_TH_PC): PC spike threshold (F)\n",
     "\n",
-    "$V_r^{PC}$ (V_R_PC): PC reset potential\n",
+    "$V_r^{PC}$ (V_R_PC): PC reset potential (F)\n",
     "\n",
-    "$\\tau_{rp}^{PC}$ (T_RP_PC): PC refractory period\n",
+    "$\\tau_{rp}^{PC}$ (T_RP_PC): PC refractory period (Z)\n",
     "\n",
-    "$E_{AHP}^{PC}$ (E_AHP_PC): PC afterhyperpolarization reversal potential\n",
+    "$E_{AHP}^{PC}$ (E_AHP_PC): PC afterhyperpolarization reversal potential (F)\n",
     "\n",
     "\n",
-    "$\\tau_m^{INH}$ (T_M_INH): INH membrane time constant\n",
+    "$\\tau_m^{INH}$ (T_M_INH): INH membrane time constant (F)\n",
     "\n",
-    "$E_L^{INH}$ (E_L_INH): INH membrane leak potential\n",
+    "$E_L^{INH}$ (E_L_INH): INH membrane leak potential (F)\n",
     "\n",
-    "$V_{th}^{INH}$ (V_TH_INH): INH spike threshold\n",
+    "$V_{th}^{INH}$ (V_TH_INH): INH spike threshold (F)\n",
     "\n",
-    "$V_r^{INH}$ (V_R_INH): INH reset potential\n",
+    "$V_r^{INH}$ (V_R_INH): INH reset potential (F)\n",
     "\n",
-    "$\\tau_{rp}^{INH}$ (T_RP_INH): INH refractory period\n",
+    "$\\tau_{rp}^{INH}$ (T_RP_INH): INH refractory period (F)\n",
     "\n",
-    "$E_E$ (E_E): EXC synaptic reversal potential\n",
+    "$E_E$ (E_E): EXC synaptic reversal potential (F)\n",
     "\n",
-    "$E_I$ (E_I): INH synaptic reversal potential"
+    "$E_I$ (E_I): INH synaptic reversal potential (F)"
    ]
   },
   {
@@ -72,9 +72,9 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\tau_E$ (T_E): EXC synaptic decay time constant\n",
+    "$\\tau_E$ (T_E): EXC synaptic decay time constant (F)\n",
     "\n",
-    "$\\tau_I$ (T_I): INH synaptic decay time constant"
+    "$\\tau_I$ (T_I): INH synaptic decay time constant (F)"
    ]
   },
   {
@@ -94,9 +94,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Associated model param\n",
+    "## Associated model params\n",
     "\n",
-    "$\\tau_{AHP}^{PC}$ (T_AHP_PC): PC afterhyperpolarization decay time constant"
+    "$\\tau_{AHP}^{PC}$ (T_AHP_PC): PC afterhyperpolarization decay time constant (F)\n",
+    "\n",
+    "$w_{AHP}^{PC}$ (W_AHP_PC): PC afterhyperpolarization weight (F)"
    ]
   },
   {
@@ -126,17 +128,17 @@
    "source": [
     "## Associated model parameters\n",
     "\n",
-    "$\\lambda^{PL}$ (L_PL): place-tuning length scale\n",
+    "$\\lambda^{PL}$ (L_PL): place-tuning length scale (Z)\n",
     "\n",
-    "$r_{max}^{PL}$ (R_MAX): place-tuning max input rate\n",
+    "$r_{max}^{PL}$ (R_MAX): place-tuning max input rate (Z)\n",
     "\n",
-    "$\\bar{w}_E^{PC, PL}$ (W_E_PC_PL): mean EXC PL->PC synaptic weight\n",
+    "$\\bar{w}_E^{PC, PL}$ (W_E_PC_PL): mean EXC PL->PC synaptic weight (V)\n",
     "\n",
-    "$\\sigma_E^{PC, PL}$ (S_E_PC_PL): std EXC PL->PC synaptic weight\n",
+    "$\\sigma_E^{PC, PL}$ (S_E_PC_PL): std EXC PL->PC synaptic weight (Z)\n",
     "\n",
-    "$s_{th}$ (S_TH): threshold for speed modulation\n",
+    "$s_{th}$ (S_TH): threshold for speed modulation (Z)\n",
     "\n",
-    "$\\beta_s$ (B_S): steepness factor for speed modulation"
+    "$\\beta_s$ (B_S): steepness factor for speed modulation (Z)"
    ]
   },
   {
@@ -164,16 +166,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\bar{w}_{E,init}^{PC, ST}$ (W_E_INIT_PC_ST): mean initial EXC synaptic weight to PC from its associated ST input\n",
+    "$\\bar{w}_{E,init}^{PC, ST}$ (W_E_INIT_PC_ST): mean initial EXC synaptic weight to PC from its associated ST input (V)\n",
     "\n",
-    "$\\sigma_{E,init}^{PC, ST}$ (S_E_INIT_PC_ST): std initial EXC synaptic weight to PC from its associated ST input"
+    "$\\sigma_{E,init}^{PC, ST}$ (S_E_INIT_PC_ST): std initial EXC synaptic weight to PC from its associated ST input (Z)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EC->CA3-PC activity-dependent plasticity\n",
+    "# STATE --> PC inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PCs receive poisson spiking inputs from corresponding upstream STATE neurons. These occur at one rate during the sensory/traj epoch and at another rate during the replay epoch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Associated model params\n",
+    "\n",
+    "$r_{trj}^{PC,ST}$ (R_TRJ_PC_ST): ST-->PC input spk rate during traj/sensory epoch\n",
+    "\n",
+    "$r_{rpl}^{PC,ST}$ (R_RPL_PC_ST): ST-->PC input spk rate during replay epoch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# STATE --> PC activity-dependent plasticity\n",
     "\n",
     "Hyun (2013, 2015) showed that a 10 Hz spike train in a CA3 PC lasting 1-2 s, elicited either by direct current injection or activation of upstream mossy fibers, was sufficient to almost double the size of EC->CA3 EPSPs.\n",
     "\n",
@@ -200,15 +227,15 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\tau_c$ (T_C): spike-counter decay time constant\n",
+    "$\\tau_c$ (T_C): spike-counter decay time constant (F)\n",
     "\n",
-    "$\\tau_w$ (T_W): ST-->PC weight change time constant\n",
+    "$\\tau_w$ (T_W): ST-->PC weight change time constant (F)\n",
     "\n",
-    "$a_p$ (A_P): max amplification factor for ST-->PC EXC weight change\n",
+    "$a_p$ (A_P): max amplification factor for ST-->PC EXC weight change (Z)\n",
     "\n",
-    "$c^*$ (C_S): spike-count threshold to trigger weight change\n",
+    "$c^*$ (C_S): spike-count threshold to trigger weight change (F)\n",
     "\n",
-    "$\\beta_c$ (B_C): spike-count steepness factor"
+    "$\\beta_c$ (B_C): spike-count steepness factor (F)"
    ]
   },
   {
@@ -235,15 +262,15 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$N_{PC}$ (N_PC): num PCs in ntwk\n",
+    "$N_{PC}$ (N_PC): num PCs in ntwk (Z)\n",
     "\n",
-    "$\\lambda^{PC, PC}$ (L_PC_PC): PC-->PC connectivity length scale\n",
+    "$\\lambda^{PC, PC}$ (L_PC_PC): PC-->PC connectivity length scale (V)\n",
     "\n",
-    "$Z^{PC, PC}$ (Z_PC_PC): PC-->PC connectivity normalization factor\n",
+    "$Z^{PC, PC}$ (Z_PC_PC): PC-->PC connectivity normalization factor (V)\n",
     "\n",
-    "$\\bar{w}_E^{PC, PC}$ (W_E_PC_PC): mean PC-->PC synaptic weight\n",
+    "$\\bar{w}_E^{PC, PC}$ (W_E_PC_PC): mean PC-->PC synaptic weight (V)\n",
     "\n",
-    "$\\sigma_E^{PC, PC}$ (S_E_PC_PC): std PC-->PC synaptic weight"
+    "$\\sigma_E^{PC, PC}$ (S_E_PC_PC): std PC-->PC synaptic weight (Z)"
    ]
   },
   {
@@ -263,15 +290,15 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$N_{INH}$ (N_INH): num INHs in ntwk\n",
+    "$N_{INH}$ (N_INH): num INHs in ntwk (Z)\n",
     "\n",
-    "$\\lambda^{INH, PC}$ (L_INH_PC): PC-->INH connectivity length scale\n",
+    "$Z^{INH, PC}$ (Z_INH_PC): PC-->INH connectivity normalization factor (Z)\n",
     "\n",
-    "$Z^{INH, PC}$ (Z_INH_PC): PC-->INH connectivity normalization factor\n",
+    "$\\lambda^{INH, PC}$ (L_INH_PC): PC-->INH connectivity length scale (Z)\n",
     "\n",
-    "$\\bar{w}_E^{INH, PC}$ (W_E_INH_PC): mean PC-->INH synaptic weight\n",
+    "$\\bar{w}_E^{INH, PC}$ (W_E_INH_PC): mean PC-->INH synaptic weight (Z)\n",
     "\n",
-    "$\\sigma_E^{INH, PC}$ (S_E_INH_PC): std PC-->INH synaptic weight"
+    "$\\sigma_E^{INH, PC}$ (S_E_INH_PC): std PC-->INH synaptic weight (Z)"
    ]
   },
   {
@@ -282,7 +309,7 @@
     "\n",
     "INHs send inhibitory projections back to PCs in the surround, but not center of their own place fields, according to:\n",
     "\n",
-    "$P(d) = \\max(0, \\min(1, Z_s^{PC, INH}\\exp[-d/\\lambda_s^{PC, INH}] - Z_c^{PC, INH}\\exp[-d/\\lambda_c^{PC, INH}]))$"
+    "$P(d) = clip(Z_s^{PC, INH}\\exp[-d/\\lambda_s^{PC, INH}] - Z_c^{PC, INH}\\exp[-d/\\lambda_c^{PC, INH}], 0, 1)$"
    ]
   },
   {
@@ -291,17 +318,17 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\lambda_c^{PC, INH}$ (L_C_PC_INH): INH --> PC connectivity length scale for center\n",
+    "$\\lambda_c^{PC, INH}$ (L_C_PC_INH): INH --> PC connectivity length scale for center (Z)\n",
     "\n",
-    "$Z_c^{PC, INH}$ (Z_C_PC_INH): INH --> PC connectivity normalization factor for center\n",
+    "$Z_c^{PC, INH}$ (Z_C_PC_INH): INH --> PC connectivity normalization factor for center (Z)\n",
     "\n",
-    "$\\lambda_s^{PC, INH}$ (L_S_PC_INH): INH --> PC connectivity length scale for surround\n",
+    "$\\lambda_s^{PC, INH}$ (L_S_PC_INH): INH --> PC connectivity length scale for surround (Z)\n",
     "\n",
-    "$Z_s^{PC, INH}$ (Z_S_PC_INH): INH --> PC connectivity normalization factor for surround\n",
+    "$Z_s^{PC, INH}$ (Z_S_PC_INH): INH --> PC connectivity normalization factor for surround (Z)\n",
     "\n",
-    "$\\bar{w}_I^{PC, INH}$ (W_I_PC_INH): mean INH --> PC INH synaptic weight\n",
+    "$\\bar{w}_I^{PC, INH}$ (W_I_PC_INH): mean INH --> PC INH synaptic weight (Z)\n",
     "\n",
-    "$\\sigma_I^{PC, INH}$ (S_I_PC_INH): std INH --> PC INH synaptic weight"
+    "$\\sigma_I^{PC, INH}$ (S_I_PC_INH): std INH --> PC INH synaptic weight (Z)"
    ]
   },
   {
@@ -324,15 +351,34 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\Delta T_{tr}$ (D_T_TR): replay trigger duration\n",
+    "$\\Delta T_{tr}$ (D_T_TR): replay trigger duration (Z)\n",
     "\n",
-    "$a_{tr}$ (A_TR): replay trigger amplitude\n",
+    "$a_{tr}$ (A_TR): replay trigger amplitude (Z)\n",
     "\n",
-    "$x_{tr}$ (X_TR): replay trigger x-center\n",
+    "$x_{tr}$ (X_TR): replay trigger x-center (Z)\n",
     "\n",
-    "$y_{tr}$ (Y_TR): replay trigger y-center\n",
+    "$y_{tr}$ (Y_TR): replay trigger y-center (Z)\n",
     "\n",
-    "$r_{tr}$ (R_TR): replay trigger radius"
+    "$r_{tr}$ (R_TR): replay trigger radius (V)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Final ST->PC weight approximation\n",
+    "\n",
+    "For computational efficiency some simulations involve approximating the ST->PC weight distribution expected to result from a trajectory through space.\n",
+    "\n",
+    "Specifically, we assume each ST->PC weight is scaled by a factor $f$ that depends on the PC's distance $d$ to the trajectory. For a given neuron:\n",
+    "\n",
+    "$f = (1-g) + a_pg$\n",
+    "\n",
+    "$g = (1 - |d/l_a|^k)_+$\n",
+    "\n",
+    "Here $l_a$ refers to the RADIUS of the approximation, and $k$ to the PITCH (or steepness) of the approximation.\n",
+    "\n",
+    "The resulting approximation is a ridge of increased ST->PC weights that follows the original trajectory."
    ]
   }
  ],
