--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "$\\tau_{rp}^{PC}$ (T_RP_PC): PC refractory period (Z)\n",
     "\n",
-    "$E_{AHP}^{PC}$ (E_AHP_PC): PC afterhyperpolarization reversal potential (F)\n",
+    "$E_{ahp}^{PC}$ (E_AHP_PC): PC afterhyperpolarization reversal potential (F)\n",
     "\n",
     "\n",
     "$\\tau_m^{INH}$ (T_M_INH): INH membrane time constant (F)\n",
