Checkpoint before testing search function.

--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "## Associated model params\n",
     "\n",
-    "$\\tau_m^{PC}$ (T_M_PC): PC membrane time constant (F)\n",
+    "$\\tau_m^{PC}$ (T_M_PC): PC (pyramidal/place cell) membrane time constant (F)\n",
     "\n",
     "$E_L^{PC}$ (E_L_PC): PC membrane leak potential (F)\n",
     "\n",
@@ -107,7 +107,7 @@
    "source": [
     "# Place-tuning\n",
     "\n",
-    "Each CA3 cell is associated with a specific place field, defined by a center $\\mathbf{x}_i$ and a width $\\lambda^{PL}$. When the rat is inside the cell's place field, the rate $r^{PL}_i$ of a specific set of synaptic inputs to the cell increases, as given by\n",
+    "Each PC is associated with a specific place field, defined by a center $\\mathbf{x}_i$ and a width $\\lambda^{PL}$. When the rat is inside the cell's place field, the rate $r^{PL}_i$ of a specific set of synaptic inputs to the cell increases, as given by\n",
     "\n",
     "$r^{PL}_i(\\mathbf{x}) = r^{PL}_{max} \\exp\\left[-\\cfrac{\\|\\mathbf{x} - \\mathbf{x}_i\\|^2}{2(\\lambda^{PL})^2}\\right]f(s)$\n",
     "\n",
@@ -251,7 +251,7 @@
    "source": [
     "We model recurrent connectivity among CA3 PCs by assuming that cells with similar place-tuning have a higher probability of connecting. Specifically, the probability of a candidate targ PC receiving a connection from a src PC at a distance $d$ away is given by:\n",
     "\n",
-    "$P(d) = \\min(1, Z^{PC, PC}\\exp[-d/\\lambda^{PC, PC}])$\n",
+    "$P(d) = \\min\\left(1, Z^{PC, PC}\\exp\\left[-\\cfrac{1}{2}\\left(\\cfrac{d}{\\lambda^{PC, PC}}\\right)^2\\right]\\right)$\n",
     "\n",
     "with $\\lambda^{PC, PC} > 0$."
    ]
@@ -281,7 +281,7 @@
     "\n",
     "PCs send excitatory projections to INH neurons with similar place fields, according to:\n",
     "\n",
-    "$P(d) = \\min(1, Z^{INH, PC}\\exp[-d/\\lambda^{INH, PC}])$."
+    "$P(d) = \\min\\left(1, Z^{INH, PC}\\exp\\left[-\\cfrac{1}{2}\\left(\\cfrac{d}{\\lambda^{INH, PC}}\\right)^2\\right]\\right)$."
    ]
   },
   {
@@ -309,7 +309,7 @@
     "\n",
     "INHs send inhibitory projections back to PCs in the surround, but not center of their own place fields, according to:\n",
     "\n",
-    "$P(d) = clip(Z_s^{PC, INH}\\exp[-d/\\lambda_s^{PC, INH}] - Z_c^{PC, INH}\\exp[-d/\\lambda_c^{PC, INH}], 0, 1)$"
+    "$P(d) = clip(Z_s^{PC, INH}\\exp\\left[-\\cfrac{1}{2}\\left(\\cfrac{d}{\\lambda_s^{PC, INH}}\\right)^2\\right] - Z_c^{PC, INH}\\exp\\left[-\\cfrac{1}{2}\\left(\\cfrac{d}{\\lambda_c^{PC, INH}}\\right)^2\\right], 0, 1)$"
    ]
   },
   {
