--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "The $i$-th neuron's membrane voltage $V^i(t)$ is given by:\n",
     "\n",
-    "$\\tau_m\\cfrac{dV^i}{dt} = -(V^i - E_L) - g^i_E(t)(V^i - E_E) - g^i_I(t)(V^i - E_I) + g^i_{AHP}(t)(V^i - E_{AHP})$\n",
+    "$\\tau_m\\cfrac{dV^i}{dt} = -(V^i - E_L) - g^i_E(t)(V^i - E_E) - g^i_I(t)(V^i - E_I)$\n",
     "\n",
-    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_E$ and $E_E$ the excitatory conductance and reversal potential, respectively, $g^i_I$ and $E_I$ the inhibitory conductance and reversal potential, and $g^i_{AHP}$ and $E_{AHP}$ the afterhyperpolarization (K+) conductance and reversal potential, with conductances defined relative to the leak conductance.\n",
+    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_E$ and $E_E$ the excitatory conductance and reversal potential, respectively, and $g^i_I$ and $E_I$ the inhibitory conductance and reversal potential, with conductances defined relative to the leak conductance.\n",
     "\n",
     "When the voltage of neuron $i$ crosses the threshold $V_{th}^i$ it spikes and is reset to $V_r^i$ for $\\tau_{rp}^i$ seconds."
    ]
